Implement NetHunter Quick Settings tile on CyanogenMod roms (squashed commits)
This commit implements a Quick Settings tile that replicates the functionality of the Kali Launcher section of the app if running on a CyanogenMod ROM, using the CM Platform SDK (https://github.com/CyanogenMod/cm_platform_sdk)
TODO: add screenshots to this commit message

This is a combination of the following commits:

CM SDK: implement custom QS tile for starting/stopping Kali shell

CM SDK: Update custom QS Tile with Kali Launcher shortcuts

CM SDK: use ListExpandedStyle instead of RemoteExpandedStyle for the tile layout

CM SDK: cleanup commits

CM SDK: check if the device runs a CyanogenMod rom

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="jackpal.androidterm.permission.RUN_SCRIPT" />
+    <uses-permission android:name="cyanogenmod.permission.PUBLISH_CUSTOM_TILE" />
 
     <application
         android:allowBackup="true"
@@ -155,6 +156,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".EditSourceActivity" />
         </activity>
+
+        <receiver android:name="TileReceiver" >
+            <intent-filter>
+                <action android:name="com.offsec.nethunter.ACTION_TOGGLE_STATE"/>
+            </intent-filter>
+        </receiver>
 
     </application>
 </manifest>
