CM SDK: Update custom QS Tile with Kali Launcher shortcuts

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
 
@@ -14,14 +14,15 @@ def getDate() {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'org.cyanogenmod:platform.sdk:2.0-SNAPSHOT'
     compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 android {
 
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -30,7 +31,7 @@ android {
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -82,7 +83,7 @@ android {
             signingConfig signingConfigs.release
             minifyEnabled true
             shrinkResources true
-            proguardFile file('proguard.cfg')
+//            proguardFile file('proguard.cfg')
             debuggable false
             jniDebuggable false
             zipAlignEnabled true
@@ -95,5 +96,8 @@ android {
 allprojects {
     repositories {
         mavenCentral()
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
 }
